# Iodine_Helium_Drag_Approach

./: .gitignore  README.md
i2_helium_md/: .claudeignore  .gitignore  CLAUDE.md  DRAG_PORT_DESIGN_DECISIONS.md  PHYSICS_BASELINE.md  README.md  SLICE1_GOALS_gated_drag_module.md  SLICE2_GOALS_baoab_ion_stepper.md  agent.md  agent_protocol.md  claude_code_terminal_basics.md  current_state.md  migration_log.md  next_tasks.md  pyproject.toml  testing.md
i2_helium_md/.claude/: settings.local.json
i2_helium_md/docs/: checkpoint_module.md  current_state.md  droplet_sizes_diagnostics_module.md  droplet_sizes_module.md  energy_balance_module.md  interactions_module.md  ion_initial_state_module.md  ion_module.md  ion_propagation_step_module.md  next_tasks.md  orientations_module.md  plot_hedft_comparison_script.md  plot_legacy_debug_scripts.md  post_processing_port_plan.md  radial_positions_module.md  run_single_pulse_script.md  velocity_distribution_module.md
i2_helium_md/i2_helium_md/: __init__.py  presets.py
i2_helium_md/i2_helium_md.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
i2_helium_md/old_data/: ressumI2HeN I^+.mat  ressumI2HeNI^+.fig  ressumI2HeNI^+.mat  ressumI2HeNI^+He.fig  ressumI2HeNI^+He.mat  ressumI2HeNI^+He2.fig  ressumI2HeNI^+He2.mat  ressumI2HeNI^+He3.fig  ressumI2HeNI^+He3.mat  ressumI2I^+.fig  ressumI2I^+.mat
i2_helium_md/scripts/: plot_hedft_comparison.py  run_single_pulse.py  testing.py
i2_helium_md/tests/: test_bimodal_gaussian_fit.py  test_boltzmann_overlay.py  test_checkpoint.py  test_compare_neutral_to_hedft.py  test_drag.py  test_ion.py  (+27 more)
(+219 files in other folders)
