[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "i2_helium_md"
version = "0.1.0"
description = "MD simulation of iodine atoms in helium nanodroplets (Python port)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["i2_helium_md*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
